--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,13 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
+rocket = "0.5.0-rc.2"
 diesel = { version = "1.4.4", features = ["mysql"] }
+diesel_codegen = { version = "*", features = ["mysql"] }
 dotenv = "0.15.0"
+serde = { version = "1.0", features = ["derive"] }
+
+[dependencies.rocket_contrib]
+version = "0.4.6"
+default-features = false
+features = ["json"]
